[package]
name = "nd-icp"
version = "0.1.0"
edition = "2021"
description = "Generic n dimensional implementation of the ICP algorithm based on SVD and the nalgebra linear algebra library"
license = "MIT"

[[bin]]
name = "icp_test"
path = "src/bin/main.rs"

[dependencies]
nalgebra = "0.33.2"
ply-rs = "0.1.3"
three-d = "0.16"

[dev-dependencies]
rstest = "0.23.0"
env_logger = "0.11.0"